integ-tests/tests/snapshots/parser__bad_floats__trailing_exp.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ trailing_exp:1:5
  │
1 │ a = 0.e
  │     ^ unable to parse number
