integ-tests/tests/snapshots/parser__bad_floats__underscore_after_dot.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ underscore_after_dot:1:5
  │
1 │ a = 1._5
  │     ^ unable to parse number
