integ-tests/tests/snapshots/parser__bad_floats__underscore_after_exp.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ underscore_after_exp:1:5
  │
1 │ a = 73e_3
  │     ^^^^^ unable to parse number
